--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
-    annotationProcessor project(':model-processor')
-// BELOW NEVER WORKS
-//    annotationProcessor "com.company:model-processor:${project.version}"
+//    annotationProcessor project(':model-processor')
+    annotationProcessor "com.company:model-processor:${project.version}"
 
     compileOnly project(':model')
     compileOnly group: 'org.immutables', name: 'value', version: '2.5.6'
